<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vender">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/venlay"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/vencode"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/vencode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/codeinp"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/venmark"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/vendbrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.9" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/venmodel"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/venmodel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/modelinp"
                android:inputType="textPersonName" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/venyear"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/venyear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="16" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/vencost"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/vencost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/vencost2"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/vencylinder"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/vencylinder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/vencylinder2"
                android:inputType="number|numberDecimal" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/vencountry"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/vencountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/vencountry2"
                android:inputType="textPersonName" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/venstatus"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/venstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/venmiliage"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/venmiliage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/venmiliage2"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/venowner"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/venowner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/venreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/venreg"
            android:textSize="24sp"
            app:backgroundTint="#FF9800" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/vencon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vencon"
            android:textSize="24sp"
            app:backgroundTint="#FF9800" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/venact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/venact"
            android:textSize="24sp"
            app:backgroundTint="#FF9800" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/veneli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/veneli"
            android:textSize="24sp"
            app:backgroundTint="#FF9800" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/vencot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/vencot"
            android:textSize="24sp"
            app:backgroundTint="#FF9800" />

    </LinearLayout>

</FrameLayout>